{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 4,
  "lineage": "f493d18c-264e-ad90-4018-e8cd8d537151",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group/sg-0b8403913c1e31a7b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8403913c1e31a7b",
            "ingress": [],
            "name": "Terraform_Firewall",
            "name_prefix": "",
            "owner_id": "975050007786",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05e1f27af662e5d82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "Firewall_rule_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-0e5508f5b78519415",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e5508f5b78519415",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8403913c1e31a7b",
            "security_group_rule_id": "sgr-0e5508f5b78519415",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "Firewall_rule_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975050007786:security-group-rule/sgr-023f12ac313faf081",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-023f12ac313faf081",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0b8403913c1e31a7b",
            "security_group_rule_id": "sgr-023f12ac313faf081",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Firewall"
          ]
        }
      ]
    }
  ]
}